--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django-debug-toolbar==2.1
 django-request-logging==0.7.0
 django-sslserver==0.22
 django-storages==1.8
-djangorestframework-simplejwt==4.4.0
+djangorestframework==3.11.0
 docutils==0.15.2
 drf-tracking==1.5.0
 gunicorn==20.0.4
